0024755: TDF_Label::AddAttribute() reverses the order of added attributes

Test case and new draw command for issue CR24755
Fix of regression linked with test case bug24047.
Fix of bug361 regression on Linux.